Add Book (New button on WEB) fully functional!